<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phonebook</string>
    <string name="login_welcome">Login Screen</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>    
    <string name="action_settings">Settings</string>
	<string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="verify_password">Re-enter Password:</string>
   	<string name="Login">Login</string>
   	<string name="log_out">Log Out</string>
   	<string name="new_user">Create an account</string>
   	<string name="create_account">Create your account</string>  	
   	<string name="first_name">First Name</string>  	
   	<string name="last_name">Last Name</string>
   	<string name="phone_number">Phone Number</string>
   	<string name="email_address">Email address</string>
   	<string name="add_contact">Add Contact</string>
   	<string name="edit_contact">Edit Contact</string>
   	<string name="remove_contact">Remove Contact</string>
   	<string name="cancel">Cancel</string>
</resources>
