<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context="com.example.phonebook.CreateUserActivity" >
   
    <!-- 
    <ListView
        android:id="@+id/contact_list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    </ListView>
    -->
    
      
    <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="0dp"
      android:text="@string/new_user"
      android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <!--  First name --> 
    <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/textView1"
      android:layout_marginTop="10dp"
      android:text="@string/first_name"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView2"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/textView2"
      android:ems="10" >
   </EditText>
  
    <!-- Last name --> 
   <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/textView2"
      android:layout_marginTop="10dp"
      android:text="@string/last_name"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView3"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/textView3"
      android:ems="10" >
   </EditText>

   
   	 <!-- Phone number -->
   <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textView3"
       android:layout_marginTop="10dp"
       android:layout_toLeftOf="@+id/editText2"
       android:text="@string/phone_number"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView4"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/textView4"
      android:ems="10" >
   </EditText>
   
   
   <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="90dp"
       android:onClick="actionContact"
       android:text="@string/add_contact" />
   
      <Button
       android:id="@+id/button2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="45dp"
       android:onClick="goHome"
       android:text="@string/cancel" />
	
	    <Button
	        android:id="@+id/button4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
       		android:layout_alignParentBottom="true"
       		android:layout_centerHorizontal="true"
       		android:layout_marginBottom="0dp"
	        android:onClick="logOut"
	        android:text="@string/log_out" />
</RelativeLayout> 