<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context="com.example.phonebook.CreateUserActivity" >
   
    <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="0dp"
      android:text="@string/new_user"
      android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <!-- Username -->
    <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/textView1"
      android:layout_marginTop="10dp"
      android:text="@string/username"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView2"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/textView2"
      android:ems="10" >
   </EditText>
  
   <!-- first name -->
   <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/textView2"
      android:layout_marginTop="10dp"
      android:text="@string/first_name"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView3"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/textView3"
      android:ems="10" >
   </EditText>

   
   	<!-- Last name -->
   <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textView3"
       android:layout_marginTop="10dp"
       android:layout_toLeftOf="@+id/editText2"
       android:text="@string/last_name"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView4"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/textView4"
      android:ems="10" >
   </EditText>
   
   <!-- Email -->
   <TextView
       android:id="@+id/textView5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView3"
       android:layout_below="@+id/textView4"
       android:layout_marginTop="10dp"
       android:text="@string/email_address"
       android:textAppearance="?android:attr/textAppearanceMedium" />
   <EditText
      android:id="@+id/editText4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView5"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/textView5"
      android:ems="10" >
   </EditText>
   
   <!-- Password -->
   <TextView
       android:id="@+id/textView6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textView5"
       android:layout_marginTop="10dp"
       android:layout_toLeftOf="@+id/editText3"
       android:text="@string/password"
       android:textAppearance="?android:attr/textAppearanceMedium" />
   <EditText
       android:id="@+id/EditText01"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/textView6"
       android:layout_alignParentRight="true"
       android:layout_toRightOf="@+id/textView7"
       android:ems="10" />

  
	<!-- Verify Password -->
   <TextView
       android:id="@+id/textView7"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView6"
       android:layout_below="@+id/textView6"
       android:layout_marginTop="10dp"
       android:text="@string/verify_password"
       android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
       android:id="@+id/EditText02"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/EditText01"
       android:layout_below="@+id/textView6"
       android:layout_toRightOf="@+id/textView7"
       android:ems="10" />
      

   <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_alignRight="@+id/textView1"
       android:layout_marginBottom="45dp"
       android:onClick="createAccount"
       android:text="@string/create_account" />
   
      <Button
       android:id="@+id/button2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="0dp"
       android:onClick="goHome"
       android:text="@string/home" />


</RelativeLayout> 